[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/module_card.gd" id="1_script"]

[node name="ModuleCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_script")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_font_sizes/font_size = 13
text = "Module Name"

[node name="CountLabel" type="Label" parent="Margin/VBox/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "x10"

[node name="StatsLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Stats..."
autowrap_mode = 2
